--- a/Advanced/Pages/Users/List.cshtml
+++ b/Advanced/Pages/Users/List.cshtml
@@ -32,7 +32,14 @@ UserManager = userManager;
 }
 public IEnumerable<IdentityUser> Users { get; set; }
 public void OnGet() {
-Users = UserManager.Users;
+  Users = UserManager.Users;
+}
+public async Task<IActionResult> OnPostAsync(string id) {
+  IdentityUser user = await UserManager.FindByIdAsync(id);
+  if (user != null) {
+    await UserManager.DeleteAsync(user);
+  }
+  return RedirectToPage();
 }
 }
 }
