--- a/Advanced/Pages/Account/Details.cshtml
+++ b/Advanced/Pages/Account/Details.cshtml
@@ -2,17 +2,21 @@
 @model DetailsModel
 <table class="table table-sm table-bordered">
   <tbody>
-    @if (Model.Cookie == null)
+    @if (Model.IdentityUser == null)
     {
       <tr>
-        <th class="text-center">No Identity Cookie</th>
+        <th class="text-center">No User</th>
       </tr>
     }
     else
     {
       <tr>
-        <th>Cookie</th>
-        <td class="text-break">@Model.Cookie</td>
+        <th>Name</th>
+        <td>@Model.IdentityUser.UserName</td>
+      </tr>
+      <tr>
+        <th>Email</th>
+        <td>@Model.IdentityUser.Email</td>
       </tr>
     }
   </tbody>
@@ -20,10 +24,19 @@
 @functions {
   public class DetailsModel : PageModel
   {
-    public string Cookie { get; set; }
-    public void OnGet()
+    private UserManager<IdentityUser> userManager;
+    public DetailsModel(UserManager<IdentityUser> manager)
     {
-      Cookie = Request.Cookies[".AspNetCore.Identity.Application"];
+      userManager = manager;
+    }
+    public IdentityUser IdentityUser { get; set; }
+    public async Task OnGetAsync()
+    {
+      if (User.Identity.IsAuthenticated)
+      {
+        IdentityUser = await
+          userManager.FindByNameAsync(User.Identity.Name);
+      }
     }
   }
 }
