simple authZ for blazor components demo 1

--- a/Advanced/Pages/_Host.cshtml
+++ b/Advanced/Pages/_Host.cshtml
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@model HostModel
+@using Microsoft.AspNetCore.Authorization
 @{ Layout = null; }
 
 <!DOCTYPE html>
@@ -16,3 +18,7 @@
     <script src="~/interop.js"></script>
 </body>
 </html>
+@functions {
+  [Authorize]
+  public class HostModel : PageModel {}
+}
